temporary formInput request in ApiPlagesController